# api/internal/profile/handler/handler.go
@@ -16,4 +16,7 @@ func NewHandler(repo *repository.Repository) *Handler {
 func (h *Handler) RegisterRoutes(router gin.IRouter, authRouter gin.IRouter) {
 	authRouter.GET("/profile", h.getProfileHandler)
 	authRouter.PUT("/profile/bio", h.updateBioHandler)
+	authRouter.POST("/profile/avatar/presign", h.presignAvatarHandler)
+	authRouter.POST("/profile/avatar/complete", h.avatarUploadCompleteHandler)
+	authRouter.POST("/profile/avatar/download", h.presignGetAvatarHandler)
 }
